including hashing to prevent repeated saving goal generation and introduced an embedded server